# ESP-Miner-NerdQAxePlus

./: sdkconfig.defaults
.github/workflows/: build.yml
components/bm1397/: CMakeLists.txt  bm1366.cpp  bm1368.cpp  bm1397.cpp  bm13xx.cpp  crc.c  serial.c
components/bm1397/include/: bm13xx.h
components/stratum/: stratum_api.c
components/stratum/include/: mining.h  stratum_api.h
main/: CMakeLists.txt  global_state.h  main.c
main/http_server/axe-os/src/app/pages/system/: system.component.scss
main/self_test/: self_test.c
main/tasks/: asic_result_task.c  create_jobs_task.c  create_jobs_task.h  stratum_task.h
